# code-snippet-vault

./: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json  tailwind.config.js
assets/: styles.css  tailwind.css  tailwind.out.css
src/: main.rs
src/components/: add_edit_screen.rs  add_edit_snippet.rs  ai_explain.rs  home_screen.rs  mod.rs  snippet_card.rs  snippet_detail.rs
